--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,38 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 </head>
 <body class="mat-typography">
+  <div class="preload">
+    <img src="../../../assets/avatars/penguin.svg">
+    <img src="../../../assets/avatars/angry-bird.svg">
+    <img src="../../../assets/avatars/bird.svg">
+    <img src="../../../assets/avatars/bunny.svg">
+    <img src="../../../assets/avatars/cow.svg">
+    <img src="../../../assets/avatars/dog.svg">
+    <img src="../../../assets/avatars/pig.svg">
+    <img src="../../../assets/avatars/troll.svg">
+    <img src="../../../assets/avatars/goth.svg">
+    <img src="../../../assets/avatars/Female-Avatar-2.svg">
+    <img src="../../../assets/avatars/Female-Avatar-3.svg">
+    <img src="../../../assets/avatars/Male-Avatar-2.svg">
+    <img src="../../../assets/avatars/Male-Avatar-3.svg">
+    <img src="../../../assets/avatars/Female-Avatar-4.svg">
+    <img src="../../../assets/avatars/Male-Avatar.svg">
+    <img src="../../../assets/avatars/Female-Avatar.svg">
+    <img src="../../../assets/avatars/anime-boy-serious.svg">
+    <img src="../../../assets/avatars/Anime-Girl-Illustration.svg">
+    <img src="../../../assets/avatars/anime-girl-one.svg">
+    <img src="../../../assets/avatars/anime-girl-two.svg">
+    <img src="../../../assets/avatars/bleed.svg">
+    <img src="../../../assets/avatars/hehe.svg">
+    <img src="../../../assets/avatars/cryingboy.svg">
+    <img src="../../../assets/avatars/green-eye.svg">
+    <img src="../../../assets/avatars/halloween-cat.svg">
+    <img src="../../../assets/avatars/halloween_1.svg">
+    <img src="../../../assets/avatars/greenthing.gif">
+    <img src="../../../assets/avatars/duck.gif">
+    <img src="../../../assets/avatars/truck.svg">
+    <img src="../../../assets/avatars/pencil.svg">
+</div>
   <app-root></app-root>
 </body>
 <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
