--- a/src/index.html
+++ b/src/index.html
@@ -43,6 +43,10 @@
     <img src="../../../assets/avatars/duck.gif">
     <img src="../../../assets/avatars/truck.svg">
     <img src="../../../assets/avatars/pencil.svg">
+    <img src="./assets/trash.svg">
+    <img src="./assets/green-check.svg">
+    <img src="./assets/red-check.svg">
+    <img src="./assets/delete-page.svg">
 </div>
   <app-root></app-root>
 </body>
