fix overflow issues

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
     <img src="./assets/green-check.svg">
     <img src="./assets/red-check.svg">
     <img src="./assets/delete-page.svg">
+    <img src="./assets/pencil.svg">
 </div>
   <app-root></app-root>
 </body>
